@@ -1,6 +1,8 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(as_flextable,glm)
 S3method(as_flextable,grouped_data)
+S3method(as_flextable,lm)
 S3method(colformat_char,flextable)
 S3method(colformat_int,flextable)
 S3method(colformat_lgl,flextable)
@@ -47,6 +49,7 @@ export(colformat_lgl)
 export(colformat_num)
 export(color)
 export(compose)
+export(continuous_summary)
 export(delete_part)
 export(dim_pretty)
 export(display)
@@ -154,15 +157,21 @@ importFrom(rlang,eval_tidy)
 importFrom(rmarkdown,pandoc_version)
 importFrom(stats,approx)
 importFrom(stats,as.formula)
+importFrom(stats,mad)
+importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,naprint)
+importFrom(stats,quantile)
 importFrom(stats,reshape)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(utils,browseURL)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
+importFrom(utils,tail)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,as_xml_document)
 importFrom(xml2,xml_attr)
